--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Alexandria:wght@100..900&family=Bellota:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Bodoni+Moda+SC:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Buda:wght@300&family=Cairo:wght@200..1000&family=Cinzel:wght@400..900&family=Indie+Flower&family=Lora:ital,wght@0,400..700;1,400..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Tsukimi+Rounded&family=Underdog&display=swap');
 @import "tailwindcss";
+
 @font-face {
   font-family: 'Romania';
   src: url('./assets/Fonts/Romania.ttf') format('truetype'),
@@ -20,6 +22,6 @@
 }
 
 h1, h2, h3, h4, h5, h6{
-  font-family: 'Romania';
+  font-family: 'Lora';
 }
 
