--- a/src/App.css
+++ b/src/App.css
@@ -20,8 +20,15 @@
 .container{
   max-width: 1400px;
 }
-
-h1, h2, h3, h4, h5, h6{
-  font-family: 'Lora';
+h6{
+  font-family: 'Romania';
 }
-
+h1, h2, h3, h4, h5{
+  font-family: 'Romania';
+}
+p{
+  font-family:'Times New Roman';
+}
+h1{
+  font-family: "Vogue";
+}
